# collaboration

./: .clang-format  CHANGELOG.rst  LICENSE  README.md  dependency.repo  dependency.repos  style_guide_cpp.md  style_guide_github.md  style_guide_py.md  style_guide_python.md  style_guide_ros.md
sample_code/ros/simple_launch_cpp/: CMakeLists.txt  package.xml
sample_code/ros/simple_launch_cpp/config/: param.yaml
sample_code/ros/simple_launch_cpp/launch/: simple_param.launch  simple_pubsub.launch
sample_code/ros/simple_launch_py/: CMakeLists.txt  package.xml
sample_code/ros/simple_launch_py/launch/: simple_param.launch  simple_pubsub.launch
sample_code/ros/simple_param_cpp/: CMakeLists.txt  package.xml
sample_code/ros/simple_param_cpp/include/simple_param_cpp/: simple_param.h
sample_code/ros/simple_param_cpp/src/: main_param.cpp  simple_param.cpp
sample_code/ros/simple_param_py/: CMakeLists.txt  package.xml  setup.py
sample_code/ros/simple_param_py/scripts/simple_param_py/: main_param.py  simple_param.py
sample_code/ros/simple_service_cpp/: CMakeLists.txt  package.xml
sample_code/ros/simple_service_cpp/include/simple_service_cpp/: simple_client.h  simple_server.h
sample_code/ros/simple_service_cpp/src/: main_client.cpp  main_server.cpp  simple_client.cpp  simple_server.cpp
sample_code/ros/simple_service_py/: CMakeLists.txt  package.xml  setup.py
sample_code/ros/simple_service_py/scripts/simple_service_py/: main_client.py  main_server.py  simple_client.py  simple_server.py
sample_code/ros/simple_topic_cpp/: CMakeLists.txt  package.xml
sample_code/ros/simple_topic_cpp/include/simple_topic_cpp/: simple_pub.h  simple_sub.h
sample_code/ros/simple_topic_cpp/src/: main_pub.cpp  main_sub.cpp  simple_pub.cpp  simple_sub.cpp
sample_code/ros/simple_topic_py/: CMakeLists.txt  package.xml  setup.py
sample_code/ros/simple_topic_py/scripts/simple_topic_py/: main_pub.py  main_sub.py  simple_pub.py  simple_sub.py
sample_code/ros2/simple_launch_cpp/: CMakeLists.txt
sample_code/ros2/simple_launch_cpp/launch/: simple_param.launch.py  simple_param.launch.xml  simple_pubsub.launch.py
sample_code/ros2/simple_launch_py/launch/: simple_param.launch.py  simple_param.launch.xml
sample_code/ros2/simple_param_cpp/: CMakeLists.txt
sample_code/ros2/simple_param_cpp/include/simple_param_cpp/: simple_param.hpp
sample_code/ros2/simple_param_cpp/src/: main_param.cpp  simple_param.cpp
sample_code/ros2/simple_param_py/: setup.py
sample_code/ros2/simple_param_py/simple_param_py/: main_param.py  simple_param.py
sample_code/ros2/simple_service_cpp/: CMakeLists.txt  package.xml
sample_code/ros2/simple_service_cpp/include/simple_service_cpp/: simple_client.hpp  simple_server.hpp
sample_code/ros2/simple_service_cpp/src/: main_client.cpp  main_server.cpp  simple_client.cpp  simple_server.cpp
sample_code/ros2/simple_service_py/simple_service_py/: main_client.py  main_server.py  simple_client.py  simple_server.py
sample_code/ros2/simple_topic_cpp/: CMakeLists.txt  package.xml
sample_code/ros2/simple_topic_cpp/include/simple_topic_cpp/: simple_pub.hpp  simple_sub.hpp
sample_code/ros2/simple_topic_cpp/src/: main_pub.cpp  main_sub.cpp  simple_pub.cpp  simple_sub.cpp
sample_code/ros2/simple_topic_py/simple_topic_py/: main_pub.py  main_sub.py  simple_pub.py  simple_sub.py
setup_pc/: setup_pc.sh
setup_pc/bashrc/: bashrc
setup_pc/ros/: c_cpp_properties.json  install_ros.sh  settings.json
setup_pc/ros2/: install_ros2.sh  settings.json
setup_pc/vscode/: install_vscode.sh
