<?xml version="1.0"?>
<package format="2">
  <name>simple_service_py</name>
  <version>0.0.0</version>
  <description>The simple_service_py package</description>

  <maintainer email="email@domain.com">maintainer</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_srvs</depend>
</package>
